--- a/index.html
+++ b/index.html
@@ -1,46 +1,66 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Redirecting to your Amazon Store...</title>
-    <script>
-      var lang = navigator.language || navigator.userLanguage;
+<head>
+  <title>Redirecting to your Amazon Store...</title>
+  <script>
+    async function redirectToAmazon() {
+      try {
+        const response = await fetch("https://ipapi.co/json/");
+        const data = await response.json();
+        const countryCode = data.country;
 
-      if (lang.includes("IN")) {
-        window.location.href = "https://www.amazon.in/dp/B0FF3C8HHH";
-      } else if (lang.includes("US") || lang.includes("en-US")) {
-        window.location.href = "https://www.amazon.com/dp/B0FF3C8HHH";
-      } else if (lang.includes("UK") || lang.includes("GB") || lang.includes("en-GB")) {
-        window.location.href = "https://www.amazon.co.uk/dp/B0FF3C8HHH";
-      } else if (lang.includes("FR") || lang.includes("fr-FR")) {
-        window.location.href = "https://www.amazon.fr/dp/B0FF3C8HHH";
-      } else if (lang.includes("CA") || lang.includes("en-CA")) {
-        window.location.href = "https://www.amazon.ca/dp/B0FF3C8HHH";
-      } else if (lang.includes("DE") || lang.includes("de-DE")) {
-        window.location.href = "https://www.amazon.de/dp/B0FF3C8HHH";
-      } else if (lang.includes("JP") || lang.includes("ja-JP")) {
-        window.location.href = "https://www.amazon.co.jp/dp/B0FF3C8HHH";
-      } else if (lang.includes("AU") || lang.includes("en-AU")) {
-        window.location.href = "https://www.amazon.com.au/dp/B0FF3C8HHH";
-      } else if (lang.includes("IT") || lang.includes("it-IT")) {
-        window.location.href = "https://www.amazon.it/dp/B0FF3C8HHH";
-      } else if (lang.includes("ES") || lang.includes("es-ES")) {
-        window.location.href = "https://www.amazon.es/dp/B0FF3C8HHH";
-      } else if (lang.includes("NL") || lang.includes("nl-NL")) {
-        window.location.href = "https://www.amazon.nl/dp/B0FF3C8HHH";
-      } else if (lang.includes("BR") || lang.includes("pt-BR")) {
-        window.location.href = "https://www.amazon.com.br/dp/B0FF3C8HHH";
-      } else if (lang.includes("MX") || lang.includes("es-MX")) {
-        window.location.href = "https://www.amazon.com.mx/dp/B0FF3C8HHH";
-      } else if (lang.includes("PL") || lang.includes("pl-PL")) {
-        window.location.href = "https://www.amazon.pl/dp/B0FF3C8HHH";
-      } else if (lang.includes("SE") || lang.includes("sv-SE")) {
-        window.location.href = "https://www.amazon.se/dp/B0FF3C8HHH";
-      } else {
+        switch (countryCode) {
+          case "US":
+            window.location.href = "https://www.amazon.com/dp/B0FF3C8HHH";
+            break;
+          case "GB":
+            window.location.href = "https://www.amazon.co.uk/dp/B0FF3C8HHH";
+            break;
+          case "DE":
+            window.location.href = "https://www.amazon.de/dp/B0FF3C8HHH";
+            break;
+          case "FR":
+            window.location.href = "https://www.amazon.fr/dp/B0FF3C8HHH";
+            break;
+          case "ES":
+            window.location.href = "https://www.amazon.es/dp/B0FF3C8HHH";
+            break;
+          case "IT":
+            window.location.href = "https://www.amazon.it/dp/B0FF3C8HHH";
+            break;
+          case "NL":
+            window.location.href = "https://www.amazon.nl/dp/B0FF3C8HHH";
+            break;
+          case "PL":
+            window.location.href = "https://www.amazon.pl/dp/B0FF3C8HHH";
+            break;
+          case "SE":
+            window.location.href = "https://www.amazon.se/dp/B0FF3C8HHH";
+            break;
+          case "JP":
+            window.location.href = "https://www.amazon.co.jp/dp/B0FF3C8HHH";
+            break;
+          case "CA":
+            window.location.href = "https://www.amazon.ca/dp/B0FF3C8HHH";
+            break;
+          case "AU":
+            window.location.href = "https://www.amazon.com.au/dp/B0FF3C8HHH";
+            break;
+          default:
+            // If country not in the list, send to US Amazon
+            window.location.href = "https://www.amazon.com/dp/B0FF3C8HHH";
+        }
+      } catch (e) {
+        // Fallback if API fails
         window.location.href = "https://www.amazon.com/dp/B0FF3C8HHH";
       }
-    </script>
-  </head>
-  <body>
-    <p>Redirecting to your nearest Amazon store...</p>
-  </body>
+    }
+
+    redirectToAmazon();
+  </script>
+</head>
+<body>
+  <p>Redirecting to your nearest Amazon store...</p>
+</body>
 </html>
+
