--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
   </script>
 </head>
 <body>
-  <p>Redirecting to your nearest Amazon store...</p>
+  <p>Redirecting to your nearest Amazon store... Please wait.</p>
 </body>
 </html>
